<resources>
    <string name="app_name">Phase1</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_okay">Okay</string>
    <string name="Login">Login</string>
    <string name="Enter_username">Enter username here</string>
    <string name="Password">Enter Password here</string>
    <string name="Done">Done</string>
    <string name="start_game">Start Game</string>
    <string name="Load_Game">Load Game</string>
    <string name="Customization">Customizations</string>
    <string name="Color">Color</string>
    <string name="Dark">Dark</string>
    <string name="Light">Light</string>
    <string name="difficulty">Difficulty</string>
    <string name="hard">Hard</string>
    <string name="normal">Normal</string>
    <string name="easy">Easy</string>
    <string name="character">Character</string>
    <string name="circle">Circle</string>
    <string name="square">Square</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="white">White</string>
    <string name="char1">Lindsey</string>
    <string name="char2">Paul</string>
    <string name="cyan">Cyan</string>
    <string name="bg_colour">Background Colour</string>
    <string name="stats">View statistics</string>
    <string name="Exit">Exit application</string>
    <string name="maze_customization">Maze game customization</string>
    <string name="Finish">Finish game</string>
    <string name="Create">Create Account</string>
    <string name="instructions_title">Instructions</string>
    <string name="PlayMole">Play Whack A Mole</string>
    <string name="PlayType">Play TypeRacer</string>
    <string name="PlayMaze">Play Maze</string>
    <string name="GoBack">Go Back to Main Menu</string>
    <string name="ScoreBoard">View Scoreboard</string>
    <string name="Logout">Logout</string>
    <string-array name="Statistics">
        <item>Overall Score</item>
        <item>Moles Hit</item>
        <item>Num MazeGames Played</item>
        <item>Num MazeItems Collected</item>
        <item>TypeRacerStreak</item>
        <item>Mole All Time High</item>
    </string-array>
    <string name="ChooseStatistic">Choose a Statistic:</string>
    <string name="Username">Username</string>
    <string name="BuyGems">Buy Gems</string>
</resources>
